--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^2.3.0",
         "vue-paypal-checkout": "^3.2.0",
         "vuetify": "^2.0.19"
     }
